--- a/pictor_backend/configure.ini
+++ b/pictor_backend/configure.ini
@@ -1,8 +1,8 @@
 [MYSQL]
 MYSQL_DB = pictor
-MYSQL_USER = sagene
-MYSQL_PASSWORD = sagene123456
-MYSQL_HOST = 192.168.1.240
+MYSQL_USER = root
+MYSQL_PASSWORD = pictor123456
+MYSQL_HOST = 127.0.0.1
 MYSQL_PORT = 3306
 
 [REDIS]
