--- a/pictor_backend/requirements.txt
+++ b/pictor_backend/requirements.txt
@@ -22,7 +22,6 @@ kombu==4.6.11
 loguru==0.5.1
 mysqlclient==2.0.1
 Pillow==7.2.0
-pkg-resources==0.0.0
 PyJWT==1.7.1
 python-dateutil==2.8.1
 pytz==2020.1
@@ -36,3 +35,4 @@ text-unidecode==1.3
 urllib3==1.25.10
 vine==1.3.0
 zipp==3.1.0
+gunicorn==20.0.4
