--- a/pictor_backend/configure.ini
+++ b/pictor_backend/configure.ini
@@ -1,6 +1,6 @@
 [MYSQL]
 MYSQL_DB = pictor
-MYSQL_USER = root
+MYSQL_USER = pictor
 MYSQL_PASSWORD = pictor123456
 MYSQL_HOST = 127.0.0.1
 MYSQL_PORT = 3306
